Agregar componente AlojamientoConjunto y su integración en el esquema de configuración, rutas y traducciones.

--- a/translations/es.json
+++ b/translations/es.json
@@ -9,6 +9,7 @@
   "active": "Activo",
   "activeCases": "Casos activos",
   "add": "Agregar",
+  "agarre": "Agarre",
   "addCase": "Agregar caso",
   "addData": "Agregar datos",
   "additionalNotes": "Notas adicionales",
@@ -164,6 +165,7 @@
   "days": "días",
   "dead": "Muerto",
   "defaulterTracing": "Seguimiento de pacientes incumplidos",
+  "deglucion": "Deglución",
   "delete": "Borrar",
   "deleteCondition": "Brorar Condición",
   "deleteModalConfirmationText": "¿Estas seguro de que quieres borrar esta condición?",
@@ -183,6 +185,7 @@
   "descentOfHead": "Descenso de la presentación",
   "descriptionRequired": "Se requiere una descripción",
   "detailedBreakdown": "Desglose Detallado",
+  "diagnosticoDeEnfermeria": "Diagnóstico de Enfermería",
   "Diagnóstico": "Diagnóstico",
   "diastolic": "Diastólico",
   "diastolicBP": "Presión diastólica (mmHg)",
@@ -197,6 +200,7 @@
   "earsImplantationOther": "Otros para implantación auricular",
   "earsOther": "Otros hallazgos en orejas",
   "earsPositionOther": "Otras observaciones sobre posición de las orejas",
+  "edadDeLaMadre": "Edad de la madre",
   "edadGestacional": "Edad Gestacional (semanas)",
   "edit": "Editar",
   "editAppointment": "Editar cita",
@@ -234,7 +238,9 @@
   "familyContacts": "Relaciones Familiares",
   "familyRelationship": "Relación Familiar",
   "familyRelationshipFormTitle": "Agregar contacto familiar",
+  "fechaDeNacimiento": "Fecha de nacimiento",
   "fechaYHoraAtencion": "Fecha y hora de atención",
+  "fechaYHoraDeIngreso": "Fecha y hora de ingreso",
   "feedingOrders": "Órdenes de alimentación",
   "feedingTime": "Tiempo que el Bebé Mamó (min)",
   "female": "Femenino",
@@ -267,6 +273,7 @@
   "gastricLavage": "Lavado gástrico",
   "gastricLavageCount": "Cantidad de lavados gástricos",
   "generalObservations": "Observaciones Generales",
+  "genero": "Género",
   "genitourinary": "Genitourinario",
   "genitourinaryElimination": "Eliminación genitourinaria",
   "genitourinaryEliminationOther": "Otras observaciones sobre la eliminación genitourinaria",
@@ -279,6 +286,7 @@
   "headCircumference": "Perímetro cefálico",
   "heartRate": "Frecuencia cardíaca",
   "height": "Altura",
+  "hematocrito": "Hematocrito (%)",
   "heridaOperatoria": "Herida Operatoria",
   "hip": "Cadera",
   "hivStatus": "Estado del VIH",
@@ -301,6 +309,7 @@
   "immunizationTabs": "Pestañas de Inmunización",
   "inactive": "Inactivo",
   "inPatientSummary": "Resumen del paciente",
+  "intervencionDeEnfermeria": "Intervención de enfermería",
   "involucionUterina": "Involución Uterina",
   "ipvOutcome": "Resultado de evaluación IPV",
   "ipvOutcomeNegative": "Negativo - No se detectó violencia",
@@ -402,6 +411,7 @@
   "noUpcomingAppointments": "No se encontraron citas próximas",
   "noUpcomingAppointmentsForPatient": "No hay citas próximas registradas para este paciente.",
   "Nueva Atención Postnatal": "Nueva atención postnatal",
+  "numeroDeHijos": "Número de hijos",
   "nursingDiagnosis": "Diagnóstico de enfermería",
   "observacion": "Observación",
   "observation": "Observación",
@@ -445,6 +455,7 @@
   "perinatalRegister": "Carnet Materno Perinatal",
   "pesoCorporal": "Peso corporal (kg)",
   "pesoMadre": "Peso madre (kg)",
+  "pezones": "Pezones",
   "phoneNumber": "Número de Contacto",
   "phoneNumberPlaceholder": "Número de Contacto",
   "physicalAssault": "1. ¿Alguna vez te ha golpeado, pateado, abofeteado o lastimado físicamente de alguna manera?",
@@ -488,6 +499,7 @@
   "primaryDiagnosis": "Diagnóstico primario",
   "primaryLanguage": "Idioma Primario",
   "priorityOfAdmission": "Prioridad de admisión",
+  "produccionLactea": "Producción Láctea",
   "proximaCita": "Próxima Cita",
   "puerperioInmediato": "Puerperio Inmediato",
   "quechua": "Quechua",
@@ -567,6 +579,7 @@
   "submit": "Guardar y cerrar",
   "success": "Éxito",
   "successfullyDeleted": "Eliminado con éxito",
+  "succion": "Succión",
   "suction": "Succión",
   "summaryOfLaborAndPostpartum": "Resumen del Parto y Puerperio",
   "superior": "Superior",
@@ -601,6 +614,7 @@
   "threatened": "2. ¿Alguna vez te ha amenazado con lastimarte?",
   "time": "Tiempo",
   "timeRecorded": "Hora registrada",
+  "tipoDeParto": "Tipo de parto",
   "today": "Hoy",
   "total": "Resultado General",
   "tracingNumber": "N.º de rastreo",
