Agregar componentes y funciones para la selección de fecha y hora de encuentros: implementar validación, integración de datos de encuentros y mejorar la interfaz de usuario. También se actualizan las traducciones y se añaden nuevas dependencias en package.json.

--- a/translations/es.json
+++ b/translations/es.json
@@ -208,9 +208,16 @@
   "editEncounter": "Editar encuentro",
   "editForm": "Editar formulario",
   "encounterDate": "Fecha del encuentro",
+  "encounterDateRange": "Rango de fechas: {{first}} - {{last}}",
+  "encounterDateTime": "Fecha y Hora del Encuentro",
   "encounterDeleted": "Encuentro eliminado",
   "encounterDetails": "Detalles del encuentro",
+  "encounterTime": "Hora del encuentro",
+  "encounterTimeFormat": "Formato de hora",
   "encountersList": "Lista de encuentros",
+  "ongoing": "En curso",
+  "recentEncounters": "Encuentros Recientes",
+  "totalEncounters": "Total de encuentros: {{count}}",
   "endDate": "Fecha final",
   "endDateBeforeStartDate": "La fecha final no puede ser anterior a la fecha inicial",
   "endRelationship": "Finalizar relación",
