Refactor EncounterDateTimeSection: remove unused code, simplify props, and enhance date/time handling. Update translations for improved clarity.

--- a/translations/es.json
+++ b/translations/es.json
@@ -9,7 +9,6 @@
   "active": "Activo",
   "activeCases": "Casos activos",
   "add": "Agregar",
-  "agarre": "Agarre",
   "addCase": "Agregar caso",
   "addData": "Agregar datos",
   "additionalNotes": "Notas adicionales",
@@ -26,6 +25,7 @@
   "adverseReactionRecord": "Registro de reacciones adversas",
   "adverseReactions": "Reacciones Adversas",
   "affectiveBond": "Vínculo afectivo",
+  "agarre": "Agarre",
   "age": "Edad",
   "ageGroupDetails": "Detalles del grupo de edad",
   "alcoholUse": "Uso de alcohol",
@@ -34,12 +34,13 @@
   "all": "Todos",
   "alojamientoConjunto": "Alojamiento Conjunto",
   "alturaUterina": "Altura uterina (cm)",
+  "AM": "AM",
   "amnioticFluid": "Líquido amniótico",
   "analPermeability": "Permeabilidad anal",
-  "analPermeabilityOther": "Otras observaciones sobre la permeabilidad anal",
   "Anamnesis": "Anamnesis",
   "anatomy": "Anatomía",
   "antecedentes": "Antecedentes",
+  "antecedentesPatologicos": "Antecedentes Patológicos del Menor",
   "anthropometrics": "Datos Antropométricos del Recién Nacido",
   "anthropometricsNowAvailable": "Ahora visibles en la página de Datos Antropométricos",
   "anthropometricsRecorded": "Datos Antropométricos registrados",
@@ -58,7 +59,7 @@
   "appointmentToFulfill": "Seleccione la cita a atender",
   "appointmentType": "Tipo de cita",
   "AtencionesPuerperio": "Atenciones puerperio",
-  "attendedAge": "Edad atención",
+  "availableForms": "Formularios disponibles para esta edad",
   "babyGivenVitaminD": "Vitamina D administrada al bebé",
   "balanceOverview": "Balance de líquidos del Recién Nacido",
   "baselineHivStatus": "Estado basal del VIH",
@@ -116,7 +117,6 @@
   "completeRequiredFields": "Por favor complete los campos requeridos (Fecha y Hora de atención).",
   "condition": "Condición",
   "conditionDeleted": "Condición eliminada",
-  "conditionDeletedSuccessfully": "The condition has been deleted successfully",
   "conditionNowVisible": "Ahora es visible en la página de condiciones",
   "conditionRequired": "Se requiere una condición",
   "conditions": "Condiciones",
@@ -124,28 +124,28 @@
   "conditionUpdated": "Condición actualizada",
   "confirmationQuestion": "¿Estas seguro de que quieres borrar esta relación?",
   "congenitalDisease": "Enfermedad Congénita",
-  "consultationDate": "Fecha atención",
   "consultationSaved": "Consulta guardada",
-  "consultationTime": "Hora atención",
   "contact": "Contacto",
   "contactCreated": "Contacto sexual registrado",
   "contacted": "Contactado",
   "contactList": "Contactos Sexuales",
   "controlNumber": "Número de control CRED",
+  "controlNumberHelper": "* Calculado automáticamente según controles previos",
   "controlPuerperio": "Control de puerperio",
   "controlsAndAtentions": "Atenciones y Controles",
+  "controlStartDateTime": "Fecha y Hora de Inicio del control",
   "coordinacion": "Coordinación",
   "cordClamping": "Clampeo del cordón",
   "createPatient": "Crear paciente",
   "credAgeGroups": "Control CRED según edad",
   "credCheckups": "Controles CRED",
   "credControls": "Controles CRED",
-  "credControlsTitle": "Control de Crecimiento y Desarrollo (CRED)",
   "credForms": "Formularios CRED",
   "CuidadoPrenatal": "Cuidado Prenatal",
   "culturalContext": "Contexto Cultural",
   "culturalNotes": "Notas Culturales y Contextuales",
   "culturalNotesPlaceholder": "Observaciones sobre factores culturales, familiares o del entorno que puedan influir en el desarrollo...",
+  "currentAge": "Edad actual",
   "currentPregnancy": "Embarazo Actual",
   "currentWeek": "Semana actual",
   "customViews": "En esta sección, encontrará vistas clínicas personalizadas adaptadas a las condiciones de los pacientes y los programas de atención inscrita.",
@@ -185,8 +185,8 @@
   "descentOfHead": "Descenso de la presentación",
   "descriptionRequired": "Se requiere una descripción",
   "detailedBreakdown": "Desglose Detallado",
-  "diagnosticoDeEnfermeria": "Diagnóstico de Enfermería",
   "Diagnóstico": "Diagnóstico",
+  "diagnosticoDeEnfermeria": "Diagnóstico de Enfermería",
   "diastolic": "Diastólico",
   "diastolicBP": "Presión diastólica (mmHg)",
   "dilatation": "Dilatación (cm)",
@@ -197,9 +197,6 @@
   "discontinuationCases": "Casos de suspensión",
   "dueAt": "Programado para",
   "ears": "Orejas",
-  "earsImplantationOther": "Otros para implantación auricular",
-  "earsOther": "Otros hallazgos en orejas",
-  "earsPositionOther": "Otras observaciones sobre posición de las orejas",
   "edadDeLaMadre": "Edad de la madre",
   "edadGestacional": "Edad Gestacional (semanas)",
   "edit": "Editar",
@@ -208,21 +205,13 @@
   "editEncounter": "Editar encuentro",
   "editForm": "Editar formulario",
   "encounterDate": "Fecha del encuentro",
-  "encounterDateRange": "Rango de fechas: {{first}} - {{last}}",
-  "encounterDateTime": "Fecha y Hora del Encuentro",
   "encounterDeleted": "Encuentro eliminado",
   "encounterDetails": "Detalles del encuentro",
-  "encounterTime": "Hora del encuentro",
-  "encounterTimeFormat": "Formato de hora",
   "encountersList": "Lista de encuentros",
-  "ongoing": "En curso",
-  "recentEncounters": "Encuentros Recientes",
-  "totalEncounters": "Total de encuentros: {{count}}",
   "endDate": "Fecha final",
   "endDateBeforeStartDate": "La fecha final no puede ser anterior a la fecha inicial",
   "endRelationship": "Finalizar relación",
   "enterCondition": "Ingrese la condición",
-  "enterControlNumber": "Ingrese número de control",
   "error": "Error",
   "errorCreatingCondition": "Error al crear condición",
   "errorDeletingCondition": "Error borrando la condiciones",
@@ -245,7 +234,6 @@
   "familyContacts": "Relaciones Familiares",
   "familyRelationship": "Relación Familiar",
   "familyRelationshipFormTitle": "Agregar contacto familiar",
-  "fechaDeNacimiento": "Fecha de nacimiento",
   "fechaYHoraAtencion": "Fecha y hora de atención",
   "fechaYHoraDeIngreso": "Fecha y hora de ingreso",
   "feedingOrders": "Órdenes de alimentación",
@@ -268,7 +256,6 @@
   "following": "Seguimiento",
   "followUpDate": "Fecha de seguimiento",
   "fontanelle": "Fontanela",
-  "fontanelleOther": "Otras observaciones sobre fontanela",
   "formInvalidFields": "Por favor revise los siguientes campos:",
   "formName": "Nombre del Formulario (A-Z)",
   "forms": "Forms",
@@ -280,10 +267,8 @@
   "gastricLavage": "Lavado gástrico",
   "gastricLavageCount": "Cantidad de lavados gástricos",
   "generalObservations": "Observaciones Generales",
-  "genero": "Género",
   "genitourinary": "Genitourinario",
   "genitourinaryElimination": "Eliminación genitourinaria",
-  "genitourinaryEliminationOther": "Otras observaciones sobre la eliminación genitourinaria",
   "gestationalAge": "Edad gestacional (semanas)",
   "gestationalAgeAtBorn": "Edad Gestacional al Nacer",
   "gestationalSize": "Tamaño gestacional",
@@ -324,7 +309,6 @@
   "ipvQuestions": "Preguntas sobre violencia de pareja íntima",
   "itemsPerPage": "Elementos por página",
   "kg": "kg",
-  "kidHistory": "Antecedentes patológicos",
   "labourAndDelivery": "Parto y Puerperio",
   "labourAndDeliveryTabs": "Pestañas de Parto y Puerperio",
   "labourDetails": "Detalles del trabajo de parto",
@@ -339,7 +323,6 @@
   "legendItems": "Elementos de la leyenda",
   "lenguaje": "Lenguaje",
   "limbs": "Extremidades",
-  "limbsOther": "Otras observaciones sobre extremidades",
   "limite": "Límite",
   "listingDate": "Fecha de listado",
   "liveBirths": "Nacidos vivos",
@@ -370,13 +353,10 @@
   "moderate": "Moderada",
   "motricidad": "Motricidad",
   "mouth": "Boca",
-  "mouthOther": "Otras observaciones sobre la boca",
   "movimientoFetal": "Movimiento fetal",
   "muscleTone": "Tono muscular",
-  "muscleToneOther": "Otras observaciones sobre tono muscular",
   "name": "Nombre",
   "neck": "Cuello",
-  "neckOther": "Otras observaciones sobre el cuello",
   "neonatalAbnormalities": "Anormalidades neonatales",
   "neonatalCare": "Curso de Vida del Niño",
   "neonatalCareTabs": "Pestañas de Atención Neonatal",
@@ -384,7 +364,6 @@
   "neonatalProblems": "Problemas neonatales",
   "neonatalSummary": "Resumen neonatal",
   "neurologicalEvaluation": "Valoración neurológica",
-  "neurologicalEvaluationOther": "Otras observaciones sobre la valoración neurológica",
   "never": "Nunca",
   "newbornAntropometrics": "Antropometría",
   "newbornEvaluation": "Evaluación del Recién Nacido",
@@ -412,7 +391,6 @@
   "normalAlto": "Normal Alto",
   "normalBajo": "Normal Bajo",
   "nose": "Nariz",
-  "noseOther": "Otras observaciones sobre la nariz",
   "notApplicable": "No aplica",
   "notes": "Notas",
   "noUpcomingAppointments": "No se encontraron citas próximas",
@@ -429,6 +407,7 @@
   "occurrenceDate": "Fecha de ocurrencia del evento",
   "onDate": "A la fecha",
   "onsetDate": "Fecha de inicio",
+  "onsetDateCannotBeInTheFuture": "Onset date cannot be in the future",
   "operatingDoctor": "Médico cirujano",
   "otherRelationships": "Relaciones No Familiares",
   "otherSubstanceAbuse": "Abuso de otras sustancias",
@@ -448,6 +427,7 @@
   "partoPrematuro": "Partos prematuros",
   "past": "Pasado",
   "patient": "Paciente",
+  "patientAgeGroup": "Grupo Etario del Paciente",
   "patientAndCulturalInfo": "Información del Paciente y Contexto Cultural",
   "patientFamilyTable": "Tabla de contactos familiares",
   "patientInfo": "Información del Paciente",
@@ -455,7 +435,9 @@
   "patientNotFound": "Paciente no encontrado",
   "patientPlaceHolder": "Buscar Paciente",
   "pending": "Pendiente",
+  "percentileMode": "Percentiles",
   "percentiles": "Percentiles",
+  "percentileView": "Percentiles",
   "perinatalDataRecorded": "Datos perinatales registrados",
   "perinatalDataSaveError": "Error al guardar datos perinatales",
   "perinatalRecord": "Antecedentes Perinatales",
@@ -469,6 +451,7 @@
   "PielYMucosas": "Piel y mucosas",
   "Plan de Parto (Control/Visita/No se hizo/NA)": "Plan de parto (Control/VisitA/No SE Hizo/Na)",
   "pleaseFillField": "Por favor complete los campos requeridos",
+  "PM": "PM",
   "pnsAnonymousNotification": "Notificación anónima",
   "pnsAnonymousNotificationDesc": "Se notifica sin revelar la identidad del paciente",
   "pnsAproach": "Enfoque de notificación de parejas (PNS)",
@@ -542,7 +525,6 @@
   "rural": "Rural/Andino",
   "save": "Guardar",
   "saveAndClose": "Guardar y Cerrar",
-  "saveAndContinue": "Guardar y Continuar",
   "savedRelationship": "Relación guardada con éxito",
   "savedRlship": "Relación guardada exitosamente",
   "saveError": "Error al guardar consulta",
@@ -576,8 +558,9 @@
   "socialHistory": "Historia social",
   "spanish": "Español",
   "spinalColumn": "Columna vertebral",
-  "spinalColumnOther": "Otras observaciones sobre columna vertebral",
   "startDate": "Fecha de inicio",
+  "startTime": "Start time",
+  "startTimeFormat": "Start time format",
   "status": "Estado",
   "statusAtDischarge": "Estado al alta",
   "stillBirths": "Nacidos muertos",
@@ -629,7 +612,6 @@
   "type": "Tipo",
   "typeOfSurgery": "Tipo de cirugía",
   "umbilicalCord": "Cordón umbilical",
-  "unknownError": "Un error Desconocido ocurrio",
   "upcoming": "Próximo (duda)",
   "upcomingAppointments": "Próximas citas",
   "upcomingCheckups": "Próximos controles",
@@ -662,5 +644,7 @@
   "weightForGestationalAge": "Peso para Edad Gestacional",
   "wellChildCare": "Control de Niño Sano",
   "yes": "Sí",
-  "zScores": "Z-Scores"
+  "zScoreMode": "Z-Scores",
+  "zScores": "Z-Scores",
+  "zScoreView": "Z-Scores"
 }
