--- a/translations/en.json
+++ b/translations/en.json
@@ -25,6 +25,7 @@
   "adverseReactionRecord": "Registro de Reacciones Adversas a Vacunas",
   "adverseReactions": "Reacciones Adversas",
   "affectiveBond": "Vínculo Afectivo",
+  "agarre": "Agarre",
   "age": "Age",
   "ageGroupDetails": "Age group details",
   "alcoholUse": "Alcohol Use",
@@ -33,12 +34,13 @@
   "all": "All",
   "alojamientoConjunto": "Alojamiento Conjunto",
   "alturaUterina": "Fundal height (cm)",
+  "AM": "AM",
   "amnioticFluid": "Amniotic Fluid",
   "analPermeability": "Anal Permeability",
-  "analPermeabilityOther": "Other for anal permeability",
   "Anamnesis": "Anamnesis",
   "anatomy": "Anatomía",
   "antecedentes": "Medical History",
+  "antecedentesPatologicos": "Antecedentes Patológicos del Menor",
   "anthropometrics": "Datos Antropométricos del Recién Nacido",
   "anthropometricsNowAvailable": "Ahora visibles en la página de Datos Antropométricos",
   "anthropometricsRecorded": "Datos Antropométricos registrados",
@@ -57,7 +59,7 @@
   "appointmentToFulfill": "Select appointment to fulfill",
   "appointmentType": "Appointment type",
   "AtencionesPuerperio": "Postpartum Care",
-  "attendedAge": "Edad atención",
+  "availableForms": "Formularios disponibles para esta edad",
   "babyGivenVitaminD": "Baby Given Vitamin K",
   "balanceOverview": "Fluid Balance",
   "baselineHivStatus": "Baseline HIV Status",
@@ -115,7 +117,6 @@
   "completeRequiredFields": "Por favor complete los campos requeridos (Fecha y Hora de atención).",
   "condition": "Condition",
   "conditionDeleted": "Condition deleted",
-  "conditionDeletedSuccessfully": "The condition has been deleted successfully",
   "conditionNowVisible": "It is now visible on the Conditions page",
   "conditionRequired": "A condition is required",
   "conditions": "Conditions",
@@ -123,28 +124,28 @@
   "conditionUpdated": "Condition updated",
   "confirmationQuestion": "Are you sure you want to delete relationship?",
   "congenitalDisease": "Enfermedad Congénita",
-  "consultationDate": "Fecha atención",
   "consultationSaved": "Consultation Saved",
-  "consultationTime": "Hora atención",
   "contact": "Contact",
   "contactCreated": "Contact created",
   "contacted": "Contacted",
   "contactList": "Contact list",
   "controlNumber": "Número de control CRED",
+  "controlNumberHelper": "* Calculado automáticamente según controles previos",
   "controlPuerperio": "Postpartum Checkups",
   "controlsAndAtentions": "Atenciones y Controles",
+  "controlStartDateTime": "Fecha y Hora de Inicio del control",
   "coordinacion": "Coordinación",
   "cordClamping": "Cord Clamping",
   "createPatient": "Create patient",
   "credAgeGroups": "Control Según Edad",
   "credCheckups": "Controles CRED",
   "credControls": "Controles CRED",
-  "credControlsTitle": "Control de Crecimiento y Desarrollo (CRED)",
   "credForms": "Formularios CRED",
   "CuidadoPrenatal": "Cuidado Prenatal",
   "culturalContext": "Contexto Cultural",
   "culturalNotes": "Notas Culturales y Contextuales",
   "culturalNotesPlaceholder": "Observaciones sobre factores culturales, familiares o del entorno que puedan influir en el desarrollo...",
+  "currentAge": "Edad actual",
   "currentPregnancy": "Embarazo Actual",
   "currentWeek": "Semana actual",
   "customViews": "In this section, you'll find custom clinical views tailored to patients' conditions and enrolled care programs.",
@@ -164,6 +165,7 @@
   "days": "días",
   "dead": "Dead",
   "defaulterTracing": "Defaulter tracing",
+  "deglucion": "Deglución",
   "delete": "Delete",
   "deleteCondition": "Delete condition",
   "deleteModalConfirmationText": "Are you sure you want to delete this condition?",
@@ -184,6 +186,7 @@
   "descriptionRequired": "Debe ingresar una descripción de la reacción",
   "detailedBreakdown": "Desglose Detallado",
   "Diagnóstico": "Diagnosis",
+  "diagnosticoDeEnfermeria": "Diagnóstico de Enfermería",
   "diastolic": "Diastolic",
   "diastolicBP": "Diastolic BP (mmHg)",
   "dilatation": "Dilatation (cm)",
@@ -194,9 +197,7 @@
   "discontinuationCases": "Discontinuation cases",
   "dueAt": " Due at",
   "ears": "Ears",
-  "earsImplantationOther": "Other for implantation",
-  "earsOther": "Other for ears",
-  "earsPositionOther": "Other for position",
+  "edadDeLaMadre": "Edad de la madre",
   "edadGestacional": "Gestational Age (weeks)",
   "edit": "Edit",
   "editAppointment": "Edit an appointment",
@@ -211,7 +212,6 @@
   "endDateBeforeStartDate": "La fecha final no puede ser anterior a la fecha inicial",
   "endRelationship": "End relationship",
   "enterCondition": "Enter condition",
-  "enterControlNumber": "Ingrese número de control",
   "error": "Error",
   "errorCreatingCondition": "Error creating condition",
   "errorDeletingCondition": "Error deleting condition",
@@ -235,6 +235,7 @@
   "familyRelationship": "Relación Familiar",
   "familyRelationshipFormTitle": "Family Relationship Form",
   "fechaYHoraAtencion": "Date and Time of the Appointment",
+  "fechaYHoraDeIngreso": "Fecha y hora de ingreso",
   "feedingOrders": "Feeding Orders",
   "feedingTime": "Tiempo que el Bebé Mamó (min)",
   "female": "Femenino",
@@ -255,7 +256,6 @@
   "following": "Seguimiento",
   "followUpDate": "Follow Up Date",
   "fontanelle": "Fontanelle",
-  "fontanelleOther": "Other (Fontanelle)",
   "formInvalidFields": "Please review the following fields:",
   "formName": "Nombre del Formulario (A-Z)",
   "forms": "Forms",
@@ -269,7 +269,6 @@
   "generalObservations": "Observaciones Generales",
   "genitourinary": "Genitourinary",
   "genitourinaryElimination": "Genitourinary",
-  "genitourinaryEliminationOther": "Other (Elimination)",
   "gestationalAge": "Gestational Age (weeks)",
   "gestationalAgeAtBorn": "Edad Gestacional al Nacer",
   "gestationalSize": "Gestational Size",
@@ -279,6 +278,7 @@
   "headCircumference": "Head Circumference (cm)",
   "heartRate": "Heart Rate (bpm)",
   "height": "Height (cm)",
+  "hematocrito": "Hematocrito (%)",
   "heridaOperatoria": "Herida Operatoria",
   "hip": "Cadera",
   "hivStatus": "HIV Status",
@@ -301,6 +301,7 @@
   "immunizationTabs": "Pestañas de Inmunización",
   "inactive": "Inactive",
   "inPatientSummary": "In Patient Summary",
+  "intervencionDeEnfermeria": "Intervención de enfermería",
   "involucionUterina": "Involución Uterina",
   "ipvOutcome": "IPV Outcome",
   "ipvOutcomeNegative": "Negativo - No se detectó violencia",
@@ -308,7 +309,6 @@
   "ipvQuestions": "IPV Questions",
   "itemsPerPage": "Items per page",
   "kg": "kg",
-  "kidHistory": "Antecedentes Patologicos",
   "labourAndDelivery": "Parto y Puerperio",
   "labourAndDeliveryTabs": "Pestañas de Parto y Puerperio",
   "labourDetails": "Labour Details",
@@ -323,7 +323,6 @@
   "legendItems": "Elementos de la leyenda",
   "lenguaje": "Lenguaje",
   "limbs": "Limbs",
-  "limbsOther": "Other fro limbs",
   "limite": "Límite",
   "listingDate": "Listing date",
   "liveBirths": "Nacidos vivos",
@@ -354,13 +353,10 @@
   "moderate": "Moderada",
   "motricidad": "Motricidad",
   "mouth": "Mouth",
-  "mouthOther": "Other for mouth",
   "movimientoFetal": "Fetal movement",
   "muscleTone": "muscle tone",
-  "muscleToneOther": "Other for muscle tone",
   "name": "Name",
   "neck": "Neck",
-  "neckOther": "Other for neck",
   "neonatalAbnormalities": "Neonatal Abnormalities",
   "neonatalCare": "Historia Neonatal",
   "neonatalCareTabs": "Pestañas de Atención Neonatal",
@@ -368,7 +364,6 @@
   "neonatalProblems": "Neonatal Problems",
   "neonatalSummary": "Neonatal Summary",
   "neurologicalEvaluation": "Neurological Evaluation ",
-  "neurologicalEvaluationOther": "Other for Neurological Evaluation",
   "never": "Nunca",
   "newbornAntropometrics": "Newborn Antropometrics",
   "newbornEvaluation": "Evaluation of the newborn",
@@ -396,12 +391,12 @@
   "normalAlto": "Normal Alto",
   "normalBajo": "Normal Bajo",
   "nose": "nose",
-  "noseOther": "Other for nose",
   "notApplicable": "No aplica",
   "notes": "Notes",
   "noUpcomingAppointments": "No upcoming appointments found",
   "noUpcomingAppointmentsForPatient": "There are no upcoming appointments to display for this patient",
   "Nueva Atención Postnatal": "New Postnatal Care",
+  "numeroDeHijos": "Número de hijos",
   "nursingDiagnosis": "Diagnóstico de Enfermería",
   "observacion": "Observación",
   "observation": "Observation",
@@ -412,6 +407,7 @@
   "occurrenceDate": "Fecha de ocurrencia",
   "onDate": "On Date",
   "onsetDate": "Onset date",
+  "onsetDateCannotBeInTheFuture": "Onset date cannot be in the future",
   "operatingDoctor": "Operating Doctor",
   "otherRelationships": "Other Relationships",
   "otherSubstanceAbuse": "Other Substance Abuse",
@@ -430,6 +426,7 @@
   "partoPrematuro": "Preterm deliveries",
   "past": "Past",
   "patient": "Patient",
+  "patientAgeGroup": "Grupo Etario del Paciente",
   "patientAndCulturalInfo": "Información del Paciente y Contexto Cultural",
   "patientFamilyTable": "Patient family table",
   "patientInfo": "Información del Paciente",
@@ -437,19 +434,23 @@
   "patientNotFound": "Patient Not Found",
   "patientPlaceHolder": "Search patient",
   "pending": "Pending",
+  "percentileMode": "Percentiles",
   "percentiles": "Percentiles",
+  "percentileView": "Percentiles",
   "perinatalDataRecorded": "Perinatal Data Recorded",
   "perinatalDataSaveError": "Error saving perinatal data",
   "perinatalRecord": "Registro Perinatal",
   "perinatalRegister": "Perinatal Maternal Carnet",
   "pesoCorporal": "Body Weight (kg)",
   "pesoMadre": "Maternal Weight (kg)",
+  "pezones": "Pezones",
   "phoneNumber": "Phone number",
   "phoneNumberPlaceholder": "Phone number",
   "physicalAssault": "1. Has he/she ever hit, kicked, slapped, or otherwise physically hurt you?",
   "PielYMucosas": "Skin and Mucosa",
   "Plan de Parto (Control/Visita/No se hizo/NA)": "Birth Plan (Check-up/Visit/Not done/N/A)",
   "pleaseFillField": "Please complete the required fields",
+  "PM": "PM",
   "pnsAnonymousNotification": "Notificación anónima",
   "pnsAnonymousNotificationDesc": "Se notifica sin revelar la identidad del paciente",
   "pnsAproach": "PNS Aproach",
@@ -487,6 +488,7 @@
   "primaryDiagnosis": "Primary Diagnosis",
   "primaryLanguage": "Idioma Primario",
   "priorityOfAdmission": "Priority Of Admission",
+  "produccionLactea": "Producción Láctea",
   "proximaCita": "Next Appointment",
   "puerperioInmediato": "Puerperio Inmediato",
   "quechua": "Quechua",
@@ -522,7 +524,6 @@
   "rural": "Rural/Andino",
   "save": "Save",
   "saveAndClose": "Guardar y Cerrar",
-  "saveAndContinue": "Guardar y Continuar",
   "savedRelationship": "Relationship ended successfully",
   "savedRlship": "Relationship saved successfully",
   "saveError": "Error saving consultation",
@@ -556,8 +557,9 @@
   "socialHistory": "Social History",
   "spanish": "Español",
   "spinalColumn": "spinal column",
-  "spinalColumnOther": "Other for spinal column",
   "startDate": "Start Date",
+  "startTime": "Start time",
+  "startTimeFormat": "Start time format",
   "status": "Status",
   "statusAtDischarge": "Status at Discharge",
   "stillBirths": "Nacidos muertos",
@@ -566,6 +568,7 @@
   "submit": "Save and Close",
   "success": "Éxito",
   "successfullyDeleted": "successfully deleted",
+  "succion": "Succión",
   "suction": "Succión",
   "summaryOfLaborAndPostpartum": "Resumen del Parto y Puerperio",
   "superior": "Superior",
@@ -600,6 +603,7 @@
   "threatened": "2. Has he/she ever threatened to hurt you?",
   "time": "Tiempo",
   "timeRecorded": "Time Recorded",
+  "tipoDeParto": "Tipo de parto",
   "today": "Today",
   "total": "Resultado General",
   "tracingNumber": "Tracing No.",
@@ -607,7 +611,6 @@
   "type": "Type",
   "typeOfSurgery": "Type of Surgery",
   "umbilicalCord": " Umbilical cord",
-  "unknownError": "An unknown error occurred",
   "upcoming": "Upcoming",
   "upcomingAppointments": "Upcoming appointments",
   "upcomingCheckups": "Upcoming checkups",
@@ -640,5 +643,7 @@
   "weightForGestationalAge": "Peso para Edad Gestacional",
   "wellChildCare": "Control de Niño Sano",
   "yes": "Yes",
-  "zScores": "Z-Scores"
+  "zScoreMode": "Z-Scores",
+  "zScores": "Z-Scores",
+  "zScoreView": "Z-Scores"
 }
