Agregar utilidades para grupos etarios: implementar la interfaz AgeGroup y funciones para calcular la edad y obtener grupos etarios basados en la fecha de nacimiento. Actualizar rutas de importación en el formulario de controles infantiles. Actualizar traducción de términos relacionados con la hora de inicio en español.

--- a/translations/es.json
+++ b/translations/es.json
@@ -559,8 +559,8 @@
   "spanish": "Español",
   "spinalColumn": "Columna vertebral",
   "startDate": "Fecha de inicio",
-  "startTime": "Start time",
-  "startTimeFormat": "Start time format",
+  "startTime": "Hora de Inicio",
+  "startTimeFormat": "Formato de Hora de Inicio",
   "status": "Estado",
   "statusAtDischarge": "Estado al alta",
   "stillBirths": "Nacidos muertos",
