Agregar dashboard de antecedentes sociales: implementar el componente SocialHistoryDashboard y actualizar las rutas y metadatos correspondientes.

--- a/translations/es.json
+++ b/translations/es.json
@@ -556,6 +556,7 @@
   "smoking": "Fuma",
   "smokingDuration": "Duración del tabaquismo",
   "socialHistory": "Historia social",
+  "antecedentes": "Antecedentes",
   "spanish": "Español",
   "spinalColumn": "Columna vertebral",
   "startDate": "Fecha de inicio",
