--- a/translations/es.json
+++ b/translations/es.json
@@ -556,7 +556,6 @@
   "smoking": "Fuma",
   "smokingDuration": "Duración del tabaquismo",
   "socialHistory": "Historia social",
-  "antecedentes": "Antecedentes",
   "spanish": "Español",
   "spinalColumn": "Columna vertebral",
   "startDate": "Fecha de inicio",
@@ -647,5 +646,15 @@
   "yes": "Sí",
   "zScoreMode": "Z-Scores",
   "zScores": "Z-Scores",
-  "zScoreView": "Z-Scores"
+  "zScoreView": "Z-Scores",
+  "dyakuPatients": "Pacientes Dyaku MINSA",
+  "dyakuPatientsDescription": "Consultar pacientes del sistema FHIR Dyaku del MINSA",
+  "dyakuPatientsTitle": "Pacientes FHIR - Dyaku MINSA",
+  "dyakuPatientsSubtitle": "Lista de pacientes registrados en el sistema FHIR del MINSA",
+  "dni": "DNI",
+  "gender": "Género",
+  "birthDate": "Fecha de Nacimiento",
+  "email": "Email",
+  "phone": "Teléfono",
+  "errorLoadingPatients": "Error al cargar los pacientes: {{error}}"
 }
