feat: Implementar sincronización de pacientes Dyaku a OpenMRS
MEJORAS IMPLEMENTADAS:
- Configuración de URL Dyaku en config schema usando useConfig hook
- Funcionalidad de sincronización de pacientes desde FHIR Dyaku a OpenMRS
- Componente DyakuPatientsSync con modal de progreso y manejo de errores
- Mapeo de datos FHIR a formato OpenMRS para pacientes
- Verificación de pacientes existentes antes de crear duplicados
- Actualización automática de la tabla después de sincronización
- Traducciones completas en español para toda la funcionalidad

CARACTERÍSTICAS TÉCNICAS:
- useConfig para configuración dinámica de URL base FHIR
- Funciones de sincronización con manejo de lotes configurable
- Componente de sincronización con progress bar y notificaciones
- Estilos responsivos para modal de sincronización
- Integración completa con Carbon UI y OpenMRS framework
- Manejo de errores robusto con fallbacks

ARCHIVOS MODIFICADOS:
- src/config-schema.ts: Agregada configuración dyaku
- src/dyaku-patients/dyaku-patients.resource.ts: Funciones de sincronización
- src/dyaku-patients/dyaku-patients-sync.component.tsx: Modal de sincronización
- src/dyaku-patients/dyaku-patients-sync.scss: Estilos del modal
- src/dyaku-patients/dyaku-patients-table.component.tsx: Botón de sincronización
- src/dyaku-patients/dyaku-patients-table.scss: Layout del header
- translations/es.json: Traducciones de sincronización

--- a/translations/es.json
+++ b/translations/es.json
@@ -656,5 +656,22 @@
   "birthDate": "Fecha de Nacimiento",
   "email": "Email",
   "phone": "Teléfono",
-  "errorLoadingPatients": "Error al cargar los pacientes: {{error}}"
+  "errorLoadingPatients": "Error al cargar los pacientes: {{error}}",
+  "syncDyakuPatients": "Sincronizar Pacientes",
+  "syncDyakuPatientsTitle": "Sincronización de Pacientes Dyaku",
+  "syncing": "Sincronizando...",
+  "startSync": "Iniciar Sincronización",
+  "syncDisabled": "Sincronización deshabilitada",
+  "syncDisabledMessage": "La sincronización está deshabilitada en la configuración.",
+  "syncDescription": "Este proceso sincronizará hasta {{batchSize}} pacientes desde el sistema FHIR Dyaku hacia OpenMRS.",
+  "syncWarning": "Los pacientes existentes serán actualizados, y los nuevos serán creados automáticamente.",
+  "syncingPatients": "Sincronizando pacientes...",
+  "syncProgress": "Progreso: {{progress}}%",
+  "syncSuccess": "Sincronización completada",
+  "syncError": "Error en la sincronización",
+  "syncSuccessMessage": "Se sincronizaron {{count}} pacientes exitosamente.",
+  "syncErrorMessage": "Error durante la sincronización. Ver detalles abajo.",
+  "synchronized": "Sincronizados",
+  "failed": "Fallidos",
+  "syncErrors": "Errores:"
 }
