feat: Agregar sincronización individual de pacientes por fila
NUEVA FUNCIONALIDAD:
- Botón de sincronización individual en cada fila de la tabla
- Permite sincronizar pacientes uno por uno en lugar de en lote
- Feedback visual inmediato por paciente individual

COMPONENTES CREADOS:
- DyakuPatientSyncButton: Botón con estados visual (loading, success, error)
- Estilos responsivos para el botón individual
- Integración completa en la tabla de pacientes

CARACTERÍSTICAS TÉCNICAS:
- syncSinglePatient() función para sincronización individual
- Estados visuales: botón normal → loading → éxito/error → auto-reset
- Notificaciones inline con auto-dismiss
- Iconos dinámicos (CloudUpload → CheckmarkOutline)
- Actualización automática de tabla tras sincronización exitosa

MEJORAS UX:
- Columna 'Acciones' agregada a la tabla
- Sincronización granular paciente por paciente
- Feedback inmediato sin modales que interrumpan flujo
- Traducciones completas en español
- Diseño consistente con Carbon UI

Ahora los usuarios pueden:
✅ Sincronizar todos los pacientes (botón header)
✅ Sincronizar pacientes individuales (botón por fila)
✅ Ver estado de sincronización por paciente
✅ Experiencia fluida sin interrupciones

--- a/translations/es.json
+++ b/translations/es.json
@@ -673,5 +673,10 @@
   "syncErrorMessage": "Error durante la sincronización. Ver detalles abajo.",
   "synchronized": "Sincronizados",
   "failed": "Fallidos",
-  "syncErrors": "Errores:"
+  "syncErrors": "Errores:",
+  "syncPatient": "Sincronizar paciente",
+  "syncingPatient": "Sincronizando...",
+  "patientSyncedSuccessfully": "Paciente sincronizado",
+  "patientAlreadySynced": "Paciente sincronizado",
+  "syncErrorOccurred": "Error en sincronización"
 }
