todo: fix buscador

--- a/translations/en.json
+++ b/translations/en.json
@@ -645,5 +645,42 @@
   "yes": "Yes",
   "zScoreMode": "Z-Scores",
   "zScores": "Z-Scores",
-  "zScoreView": "Z-Scores"
+  "zScoreView": "Z-Scores",
+  "dyakuPatients": "Dyaku MINSA Patients",
+  "dyakuPatientsDescription": "Query patients from MINSA's Dyaku FHIR system",
+  "dyakuPatientsTitle": "FHIR Patients - Dyaku MINSA",
+  "dyakuPatientsSubtitle": "List of patients registered in MINSA's FHIR system",
+  "dyakuPatientsSearchTitle": "Search Results - Dyaku MINSA FHIR Patients",
+  "dyakuPatientsSearchSubtitle": "Results for DNI: {{dni}} ({{total}} patient(s) found)",
+  "searchByDni": "Search by DNI",
+  "searchByDniPlaceholder": "Enter patient's DNI (minimum 8 digits)",
+  "searchingFor": "Searching by DNI:",
+  "dni": "DNI",
+  "gender": "Gender",
+  "birthDate": "Birth Date",
+  "email": "Email",
+  "phone": "Phone",
+  "errorLoadingPatients": "Error loading patients: {{error}}",
+  "syncDyakuPatients": "Sync Patients",
+  "syncDyakuPatientsTitle": "Dyaku Patient Synchronization",
+  "syncing": "Syncing...",
+  "startSync": "Start Synchronization",
+  "syncDisabled": "Synchronization disabled",
+  "syncDisabledMessage": "Synchronization is disabled in configuration.",
+  "syncDescription": "This process will synchronize up to {{batchSize}} patients from Dyaku FHIR system to OpenMRS.",
+  "syncWarning": "Existing patients will be updated, and new ones will be created automatically.",
+  "syncingPatients": "Syncing patients...",
+  "syncProgress": "Progress: {{progress}}%",
+  "syncSuccess": "Synchronization completed",
+  "syncError": "Synchronization error",
+  "syncSuccessMessage": "{{count}} patients synchronized successfully.",
+  "syncErrorMessage": "Error during synchronization. See details below.",
+  "synchronized": "Synchronized",
+  "failed": "Failed",
+  "syncErrors": "Errors:",
+  "syncPatient": "Sync patient",
+  "syncingPatient": "Syncing...",
+  "patientSyncedSuccessfully": "Patient synced",
+  "patientAlreadySynced": "Patient synced",
+  "syncErrorOccurred": "Sync error"
 }
