--- a/translations/es.json
+++ b/translations/es.json
@@ -651,6 +651,11 @@
   "dyakuPatientsDescription": "Consultar pacientes del sistema FHIR Dyaku del MINSA",
   "dyakuPatientsTitle": "Pacientes FHIR - Dyaku MINSA",
   "dyakuPatientsSubtitle": "Lista de pacientes registrados en el sistema FHIR del MINSA",
+  "dyakuPatientsSearchTitle": "Resultados de búsqueda - Pacientes FHIR Dyaku MINSA",
+  "dyakuPatientsSearchSubtitle": "Resultados para DNI: {{dni}} ({{total}} paciente(s) encontrado(s))",
+  "searchByDni": "Buscar por DNI",
+  "searchByDniPlaceholder": "Ingrese el DNI del paciente (mínimo 8 dígitos)",
+  "searchingFor": "Buscando por DNI:",
   "dni": "DNI",
   "gender": "Género",
   "birthDate": "Fecha de Nacimiento",
